# DCPSPI

./: .agignore  .gitignore  .gitmodules  .gitreview  ChangeLog  Doxyfile.in  Makefile  Makefile.am  README.md  TODO  configure.ac  cppcheck_suppressed.txt  dcpdefs.h  dcpspi.c  dcpspi_process.c  dcpspi_process.h  gpio.c  gpio.h  hexdump.c  hexdump.h  meson.build  messages.c  messages.h  messages_signal.c  messages_signal.h  named_pipe.c  named_pipe.h  os.c  os.h  spi.c  spi.h  spi_hw.c  spi_hw.h  statistics.c  statistics.h  versioninfo.cache.in
config.site/: config.RasPi  config.StrBo
debian/: changelog  control.in
tests/: Makefile.am  cutter-children-1_2_4.supp  meson.build  mock_expectation.hh  mock_gpio.cc  mock_gpio.hh  mock_messages.cc  mock_messages.hh  mock_os.cc  mock_os.hh  mock_spi_hw.cc  mock_spi_hw.hh  spi_hw_data.hh  test_complete.cc  test_spi.cc  test_statistics.cc
